# ez-tickets-api

kernel/: Cargo.toml
kernel/src/: entities.rs
kernel/src/entities/: ingredient.rs  order.rs  product.rs
kernel/src/entities/ingredient/: amount.rs  id.rs  name.rs
kernel/src/entities/order/: id.rs  item.rs  options.rs  product.rs  quantity.rs
kernel/src/entities/product/: category.rs  description.rs  id.rs  name.rs  options.rs  price.rs  stock.rs
kernel/src/entities/product/category/: id.rs  name.rs  ordering.rs
kernel/src/entities/product/options/: id.rs
